# cookiecutter-qt-app

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  requirements.txt  runtests.py  testcutter
.github/workflows/: main.yml
ci/: build  build-app  install-dependencies
doc/: ci.md
docs/: ci.md  dependencies.md  icons.md  tests.md  translations.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.Apache-2.0  LICENSE.BSD  LICENSE.MIT  README.md
{{cookiecutter.project_slug}}/ci/: Dockerfile  README.md  build  build-app  build-docker-image  check-codingstyle  docker-build-app  install-dependencies
{{cookiecutter.project_slug}}/ci/lib/: README.md  common-dependencies.sh  common.sh  linux-dependencies.sh  macos-dependencies.sh  windows-dependencies.sh
{{cookiecutter.project_slug}}/cmake/: DeployQt.cmake
{{cookiecutter.project_slug}}/doc/: release-check-list.md
{{cookiecutter.project_slug}}/packaging/: CMakeLists.txt
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  Config.h.in  MainWindow.cpp  MainWindow.h  MainWindow.ui  Resources.cpp  Resources.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  app.qrc  main.cpp  translations.qrc
{{cookiecutter.project_slug}}/src/icons/: mrcapptemplate.desktop  {{cookiecutter.project_slug}}.desktop
{{cookiecutter.project_slug}}/src/translations/: app_es.ts  app_fr.ts  {{cookiecutter.project_slug}}_en.ts  {{cookiecutter.project_slug}}_es.ts  {{cookiecutter.project_slug}}_fr.ts
{{cookiecutter.project_slug}}/tests/: CMakeLists.txt  Catch2QtUtils.cpp  Catch2QtUtils.h  ExampleTest.cpp
